--- a/src/components/ShoppingCart.css
+++ b/src/components/ShoppingCart.css
@@ -53,3 +53,19 @@
 .mobile-img {
     padding: 10px !important;
 }
+
+.font-size {
+    font-size: 1.7rem !important;
+}
+
+
+@media (max-width: 800px) {
+    .font-size {
+        font-size: 1.2rem !important;
+    }
+
+    .title {
+        padding-top: 12px;
+        padding-bottom: 12px;
+    }
+  }
