--- a/src/pages/Store.css
+++ b/src/pages/Store.css
@@ -1,168 +1,167 @@
 body {
-    background-image: linear-gradient(rgba(251, 251, 251, 0.05), rgba(255, 255, 255, 0.05)), url("singapore-ge14ea0bed_1920.jpg");
-    background-position: center;
-    min-width: 400px;
-    width: 100vw !important;
-    margin: auto !important;
-}
+  background-image: linear-gradient(
+      rgba(251, 251, 251, 0.05),
+      rgba(255, 255, 255, 0.05)
+    ),
+    url('singapore-ge14ea0bed_1920.jpg');
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  min-width: 400px;
+  width: 100vw !important;
+  margin: auto !important;
+ }
 
 h1,
 h2 {
-    font-family: 'Dancing Script', cursive;
-    color: rgba(245, 245, 245, 0.916);
-    margin: auto;
-    font-size: 150px;
-    text-shadow: 2px 0 0 #000, 0 -2px 0 #000, 0 2px 0 #000, -2px 0 0 #000;
+  font-family: 'Dancing Script', cursive;
+  color: rgba(255, 229, 101, 0.916) !important;
+  margin: auto;
+  font-size: 150px;
+  text-shadow: 2px 0 0 #000, 0 -2px 0 #000, 0 2px 0 #000, -2px 0 0 #000;
 }
 
 h2 {
-    color: rgb(228, 193, 76);
-    text-align: center;
+  color: rgb(228, 193, 76);
+  text-align: center;
 }
 
-
 .store {
-    height: 100vh !important;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  height: 100vh !important;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 600px !important;
 }
 
 .card {
-    margin-bottom: 10px !important;
-    width: 45vw !important;
-    height: 35vw !important;
-    min-width: 370px !important;
-    min-height: 450px !important;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.725) !important;
-    border: 6px double rgb(255, 196, 0) !important;
-    border-radius: 50% !important;
-    display: flex;
-    justify-content: center;
-    outline: black solid 3px !important;
-    overflow: hidden;
+  margin-bottom: 10px !important;
+  width: 45vw !important;
+  height: 35vw !important;
+  min-width: 370px !important;
+  min-height: 450px !important;
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0.725) !important;
+  border: 6px double rgb(255, 196, 0) !important;
+  border-radius: 50% !important;
+  display: flex;
+  justify-content: center;
+  outline: black solid 3px !important;
+  overflow: hidden;
 }
 
 .card:after {
-    content: "";
-    position: absolute;
-    top: -50%;
-    left: -60%;
-    width: 20%;
-    height: 200%;
-    opacity: 0;
-    transform: rotate(30deg);
-    background: rgba(255, 255, 255, 0.13);
-    background: linear-gradient(to right,
-            rgba(255, 255, 255, 0.13) 0%,
-            rgba(255, 255, 255, 0.13) 77%,
-            rgba(255, 255, 255, 0.5) 92%,
-            rgba(255, 255, 255, 0.0) 100%);
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -60%;
+  width: 20%;
+  height: 200%;
+  opacity: 0;
+  transform: rotate(30deg);
+  background: rgba(255, 255, 255, 0.13);
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.13) 0%,
+    rgba(255, 255, 255, 0.13) 77%,
+    rgba(255, 255, 255, 0.5) 92%,
+    rgba(255, 255, 255, 0) 100%
+  );
 }
 
 /* Hover state - trigger effect */
 .card:hover:after {
-    opacity: 1;
-    left: 130%;
-    transition-delay: 150ms;
-    transition-property: left, top, opacity;
-    transition-duration: 0.7s, 0.7s, 0.15s;
-    transition-timing-function: ease;
+  opacity: 1;
+  left: 130%;
+  transition-delay: 150ms;
+  transition-property: left, top, opacity;
+  transition-duration: 0.7s, 0.7s, 0.15s;
+  transition-timing-function: ease;
 }
 
 /* Active state */
 .card:active:after {
-    opacity: 0;
+  opacity: 0;
 }
-
 
 .card-body {
-    animation: superman-fly-right ease-in-out 0.6s forwards;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: rgb(255, 196, 0) !important;
-
+  animation: superman-fly-right ease-in-out 0.6s forwards;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: rgb(255, 196, 0) !important;
 }
 
-
-
 @keyframes superman-fly-right {
-    from {
-        transform: translateX(100vw);
-    }
+  from {
+    transform: translateX(100vw);
+  }
 
-    to {
-        transform: translateX(0vw);
-
-    }
+  to {
+    transform: translateX(0vw);
+  }
 }
 
 .card-body-hidden {
-    animation: superman-fly-left ease-in 0.8s backwards;
-    transform: translateX(-100%);
+  animation: superman-fly-left ease-in 0.8s backwards;
+  transform: translateX(-100%);
 }
 
-
 @keyframes superman-fly-left {
-    from {
-        transform: translateX(0);
-    }
+  from {
+    transform: translateX(0);
+  }
 
-    to {
-
-        transform: translateX(100vw);
-
-    }
+  to {
+    transform: translateX(100vw);
+  }
 }
 
 .btn {
-    background-color: rgb(255, 196, 0) !important;
-    color: black !important;
-    border: 4px double black !important;
-    border-radius: 100% !important;
-    
+  background-color: rgb(255, 196, 0) !important;
+  color: black !important;
+  border: 4px double black !important;
+  border-radius: 100% !important;
 }
 
 .someClass {
-    border-radius: 0 !important;
-    min-width: 150px !important;
-    background-color: transparent !important;
-    color: rgb(255, 196, 0) !important;
-    text-transform: uppercase !important;
-    border: none !important;
-    height: 40px;
+  border-radius: 0 !important;
+  min-width: 150px !important;
+  background-color: transparent !important;
+  color: rgb(255, 196, 0) !important;
+  text-transform: uppercase !important;
+  border: none !important;
+  height: 40px;
 }
 
 .someClass:hover {
-    background-color: rgb(0, 0, 0) !important;
+  background-color: rgb(0, 0, 0) !important;
 }
 
 .title,
 .bottom {
-    background-color: rgba(0, 0, 0, 0.798);
-    border-radius: 5px;
-    padding: 5px 10px 5px 10px;
-    border-top: 5px double rgb(255, 196, 0) !important;
-    border-bottom: 5px double rgb(255, 196, 0) !important;
-    border-left: 5px double rgb(255, 196, 0) !important;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    width: 100%;
-    text-align: center;
+  background-color: rgba(0, 0, 0, 0.798);
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  border-top: 5px double rgb(255, 196, 0) !important;
+  border-bottom: 5px double rgb(255, 196, 0) !important;
+  border-left: 5px double rgb(255, 196, 0) !important;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  width: 100%;
+  text-align: center;
 }
 
 .cart-btn {
-    float: right;
+  float: right;
 }
 
 .cart-btn:hover {
-    opacity: 100%;
+  opacity: 100%;
 }
-
